--- a/introducao-javascript/index.html
+++ b/introducao-javascript/index.html
@@ -16,6 +16,8 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+				<label for="filtrar-tabela">Filtre:</label>
+				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">				
 				<table>
 					<thead>
 						<tr>
@@ -67,6 +69,8 @@
 						</tr>
 					</tbody>
 				</table>
+				<span id="erro-ajax" class="invisivel">Erro ao buscar pacientes</span id="erro-ajax" class="invisivel">
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar paciente</button>				
 			</section>
 		</main>
 		<section class="container">
@@ -93,10 +97,10 @@
 				<button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
 			</form>			
 		</section>
-		<script src="js/calculaImc.js"> 			
-		</script>
-		<script src="js/form.js"> 			
-		</script>
-
+		<script src="js/calculaImc.js"></script>
+		<script src="js/form.js"></script>
+		<script src="js/removerPaciente.js"></script>
+		<script src="js/filter.js"></script>
+		<script src="js/buscarPaciente.js"></script>
 	</body>
 </html>
